--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New user</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<% provide(:title, 'Sign Up') %>
+<h1>Sign Up</h1>
+<p> Just a random sign up page for now </p>
